assets/front/less/tc_custom.less
/* ... */
img.alignleft {
  margin: 12px 24px 12px 0;
  margin: 0.857142857rem 1.714285714rem 0.857142857rem 0;
}
img.alignright {
  margin: 12px 0 12px 24px;
  margin: 0.857142857rem 0 0.857142857rem 1.714285714rem;
}
img.aligncenter {
  margin-top: 12px;
  margin-top: 0.857142857rem;
  margin-bottom: 12px;
  margin-bottom: 0.857142857rem;
}
/* OTHER CUSTOMIZED WP CSS */

#calendar_wrap table {
  width: 100%;
  border-color: #e1e1e1;
  padding: 0;
  margin: 0 0 20px 0;
  font-size: inherit;
  border-top-style: solid;
  border-top-width: 1px;
  border-collapse: collapse;
  border-spacing: 0;
}

#footer #calendar_wrap table {
  color:#5A5A5A
}
#footer #calendar_wrap table caption{
color: #EEE;
}


table caption {
  padding: 0 0 5px 0;
  width: auto;
  text-transform: uppercase;
  font-size: 16px;
  text-align: center;
}
#wp-calendar tr,
#wp-calendar th,
#wp-calendar td {
  border-color: #e1e1e1;
}
#wp-calendar td,
#wp-calendar th {
  text-align: center;
  font-size: inherit;
  padding: 3px;
}

tr:nth-child(odd) td,
tr:nth-child(odd) th {
  background-color: #f8f8f8;
}
tr:nth-child(even) td,
tr:nth-child(even) th {
  background-color: white;
}
/*tr th:first-child,
tr td:first-child {
  border-left-style: solid;
  border-left-width: 1px;
}*/
#wp-calendar tfoot td {
  & when (@is_rtl = true) {
    text-align: right;
  }
  & when (@is_rtl = false) {
    text-align: left;
  }
}
ul {
  /*list-style: none outside;*/
}

/* FOOTER
    -------------------------------------------------- */

footer#footer {
  color: @FooterText!important;
  border-top: 10px solid @LargeBorder;
  background: @FooterBg;
  padding: 0px;
}

.footer-widgets {
  padding: 20px 0px 20px;
}

footer#footer p,
footer#footer a {
  font-size: 11px;
  line-height: 21px;
  color: @FooterText;
  margin-bottom: 2px;
  text-align: center;
}
footer#footer h3,
footer#footer h4,
footer#footer h5,
footer#footer h6 {
  font-size: 22px;
  line-height: 26px;
  color: @FooterText;
  text-align: center;
  text-shadow: 0px 0px 0px #FFF;
}

footer#footer .colophon {
  margin-top: 0px;
  background-color:@ColophonBg;
  padding: 10px 20px;
}
footer#footer .colophon a, footer#footer .colophon p {
  color:@FooterBg;
}
footer#footer .colophon .credits span[class*=text],
footer#footer .colophon .credits a{
  display: inline-block;
}


footer .widget_recent_entries li:after {
  border-bottom: none;
}

footer ul, footer ol {
  margin: 0 0 10px 0px;
}
/* SCROLL BACK TO TOP */
.tc-btt-wrapper.show {
  visibility: visible;
  cursor: pointer;
  opacity: 1.0;
}
.tc-btt-wrapper:hover {
  background: rgb(119, 119, 119) transparent;
  background: rgba(119, 119, 119, 0.5);
}
.tc-btt-wrapper {
  position: fixed;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  text-align: center;
  z-index: 99999999;
  background: rgb(119, 119, 119) transparent;
  background: rgba(119, 119, 119, 0.2);
  background: white\9;
  border: 1px solid #ddd\9;
  color: #EEE;
  width: 45px;
  height: 43px;
  line-height: 43px;
  & when (@is_rtl = true) {
    left: 30px;
  }
  & when (@is_rtl = false) {
    right: 30px;
  }
  bottom: 25px;
  padding-top: 2px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  -webkit-transition: all 0.2s ease-in-out;
  -moz-transition: all 0.2s ease-in-out;
  -ms-transition: all 0.2s ease-in-out;
  -o-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}
.tc-btt-wrapper i.btt-arrow {
  line-height: inherit;
}
.btt-arrow {
  font-size: 2em;
}
.btt-arrow:before {
  content: "\f106";
  text-shadow: 0px 1px 0 #FFF;
  top: -.06em;
}


/* ADMIN BAR
    -------------------------------------------------- */
#wpadminbar #wp-admin-bar-tc-customizr-help .ab-item:before, li#wp-admin-bar-tc-customizr-help a:before {
  content: "\f1cd";
  color: #FFF;
  padding-right: 0px;
  top: 2px;
  position: relative;
}


li#wp-admin-bar-tc-customizr-help a {
  color: #FFF;
  text-decoration: none;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
  background-color: #8DA65A;
  background-image: -moz-linear-gradient(top, #27CDA5, #1B8D71);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#27CDA5), to(#1B8D71));
  background-image: -webkit-linear-gradient(top, #27CDA5, #1B8D71);
  background-image: -o-linear-gradient(top, #27CDA5, #1B8D71);
  background-image: linear-gradient(to bottom, #27CDA5, #1B8D71);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff9db668' , endColorstr='#ff768d44' , GradientType=0);
  border-color: #1B8D71 #1B8D71 #4B5A2B;
  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
}


#wpadminbar .ab-top-menu>li#wp-admin-bar-tc-customizr-help:hover>.ab-item {
  color: #FFF;
  background: #1B8D71; /* Old browsers */
background: -moz-linear-gradient(top,  #1B8D71 1%, #27CDA5 100%, #27CDA5 100%); /* FF3.6+ */
background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#1B8D71), color-stop(100%,#27CDA5), color-stop(100%,#27CDA5)); /* Chrome,Safari4+ */
background: -webkit-linear-gradient(top,  #1B8D71 1%,#27CDA5 100%,#27CDA5 100%); /* Chrome10+,Safari5.1+ */
background: -o-linear-gradient(top,  #1B8D71 1%,#27CDA5 100%,#27CDA5 100%); /* Opera 11.10+ */
background: -ms-linear-gradient(top,  #1B8D71 1%,#27CDA5 100%,#27CDA5 100%); /* IE10+ */
background: linear-gradient(to bottom,  #1B8D71 1%,#27CDA5 100%,#27CDA5 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1B8D71', endColorstr='#27CDA5',GradientType=0 ); /* IE6-9 */
}

/* MEDIA PRINT
    -------------------------------------------------- */
/* Remove links on print (twitter bootstrap displays them) */
@media print {
  a[href]:after {
    content: "";
    }
  abbr[title]:after {
    content: "";
    }
  @page {
    margin: 1cm;
    }
}

